--- a/01-1A2B-vue.html
+++ b/01-1A2B-vue.html
@@ -8,7 +8,11 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
         />
+        <!-- 引入 Vue 3 若要放在 head 區塊，要加 defer/async 標籤-->
+        <script src="https://unpkg.com/vue@3/dist/vue.global.js" defer></script>
+        <script src="01-1A2B-vue.js" defer></script>
     </head>
+
     <body class="bg-light">
         <div id="app" class="container text-center mt-5">
             <h2 class="mb-4">1A2B猜數字遊戲 (Vue.js)</h2>
@@ -58,8 +62,11 @@
             </ul>
         </div>
 
-        <!-- 引入 Vue 3 -->
-        <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-        <script src="01-1A2B-vue.js"></script>
+        <!-- 引入 Vue 3
+        <script
+                src="https://unpkg.com/vue@3/dist/vue.global.js"
+     
+     ></script>
+        <script src="01-1A2B-vue.js"></script> -->
     </body>
 </html>
